# Text_Editor_App

./: .gitignore  CMakeLists.txt  README.md  TextEditor_UI.ui  app.cpp  app.h  main.cpp  ui_TextEditor_UI.h
resources/: resources.qrc
